fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,7 @@ nav a:hover {
 .benefits{
    list-style-type: disc;
   font-family: "Open Sans", sans-serif;
-  line-height: 40px;   
+  line-height: 35px;   
 }
 .info-wrapper {
   position: absolute;
@@ -219,8 +219,11 @@ box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.75);
   max-width: 70%;
   margin: 16% 0 0 15%;
 }
+.history{
+  margin: -30px 0 0 0;
+}
 .infoBox{
-  padding: 20px 0;
+  padding: 10px 0;
 }
 .bluetext{
   color: #0D3FA2;
@@ -280,10 +283,13 @@ box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.75);
   text-align: center;
 }
 .contact-box h2{
-  margin: 20px 0 20px 0;
+  margin: 10px 0 10px 0;
 }
 .contact-box p{
-  margin: 20px 0 20px 0;
+  margin: 10px 0 10px 0;
+}
+.contact-box i{
+  margin: 10px 0 0 0;
 }
 #cTitle{
   position: absolute;
